# chiller

./: .gitignore  README.md  dodo.py  pyproject.toml
.github/workflows/: setup_and_test.yml
chiller/: __init__.py  chiller.py  conditions.py  fluid_properties.py  psychrometrics.py  units.py  util.py
chiller/models/: __init__.py  ashrae_90_1.py  base_model.py  energyplus_eir.py  energyplus_reformulated.py
examples/: 90.1-chillers.csv  baseline_chillers.py  generate.py
